# ProtGeom

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
analysis/: compare_ankh_context.py  compare_ankh_shapes.py  compare_context.py  compare_context_wstruct.py  compare_shape_by_class.py  compare_shapes.py  compare_shapes_PCA.py
data/: eff_dim_1000_2.npy  eff_dim_1000_3.npy  eff_dim_1500_2.npy  eff_dim_500_2.npy  eff_dim_7.npy  frechet_rad_1000_2.npy  frechet_rad_1000_3.npy  frechet_rad_1500_2.npy  frechet_rad_500_2.npy  frechet_rad_7.npy  layerwise_test_losses.pickle  layerwise_train_losses.pickle  structure_sim_ankh_layer_1.npy  structure_sim_ankh_layer_10.npy  structure_sim_ankh_layer_20.npy  structure_sim_ankh_layer_30.npy  structure_sim_ankh_layer_40.npy  structure_sim_ankh_layer_48.npy
data/pdbs/a/: 1mwd.cif  2wlv.cif  3re7.cif  4kuh.cif  4r6e.cif
data/pdbs/b/: 1i4k.cif  1qaw.cif  2b14.cif  2vub.cif  4pjc.cif  5j74.cif
data/pdbs/c/: 1h5s.cif  1xin.cif  2v5c.cif  3e0q.cif  3k5o.cif  5i02.cif
data/pdbs/d/: 1sz1.cif  3e4u.cif  3ule.cif  5adg.cif  5y6d.cif
data/pdbs/e/: 2c2r.cif  3nia.cif  (+4 more)
src/: MetricComparison.py  ShapeAnalysis.py  get_representations.py  nohup.out  representations.out  sample_scop_proteins.py  train_folding_head.py
src/protgeom/: MetricComparison.py
test/: ankh_constex.nohup  ankh_context.nohup  ankh_nohup.out  ankh_shapes.nohup  compare_context.py  compare_shape_by_class.py  compare_shapes.py  compare_shapes_PCA.py  esm_interp.nohup  graphs.out  nohup.out  pca.out  shape_by_class.nohup  shapes.out
(+17 files in other folders)
