[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protgeom"
version = "0.1.0"
description = "Protein Geometry Analysis Toolset"
requires-python = ">=3.9"
dependencies = [
    "ankh==1.10.0",
    "biopython",
    "datasets==2.21.0",
    "e3nn==0.5.8",
    "einops==0.8.1",
    "fair-esm==2.0.0",
    "geomstats==2.8.0",
    "huggingface-hub==0.30.1",
    "matplotlib==3.9.4",
    "networkx==3.2.1",
    "numpy==2.0.2",
    "pandas==2.3.2",
    "pyarrow==21.0.0",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "se3-transformer-pytorch==0.9.0",
    "tmtools==0.2.0",
    "tokenizers==0.21.1",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.67.1",
    "transformers==4.50.3"
]

[tool.setuptools.packages.find]
where = ["src"]
